--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ composeBom = "2024.03.00"
 composeCompiler = "1.5.11"
 coreKtx = "1.12.0"
 coroutines = "1.7.3"
+datastore = "1.0.0"
 espressoCore = "3.5.1"
 java = "17"
 junit = "4.13.2"
@@ -24,6 +25,7 @@ serialization-json = "1.5.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
