--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31"
         >
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".feature.converter.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.QuickCurrency"
