--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 koin-android = { group = "io.insert-koin", name = "koin-android" }
+koin-android-test = { group = "io.insert-koin", name = "koin-android-test" }
 koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin-core-bom" }
 koin-core = { group = "io.insert-koin", name = "koin-core" }
 koin-annotations = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-annotations" }
